working on homepage markup

--- a/assets/sass/variables-site/_variables-site.scss
+++ b/assets/sass/variables-site/_variables-site.scss
@@ -7,6 +7,5 @@ $color__secondary: #E00011;
 
 
 // Font Variable
-$font__body : 'Lato';
-$font__secondary : 'Tiro Bangla', serif;
+$font__body :  'Montserrat', sans-serif;
 $font_awesome: "Font Awesome 5 Pro";
