--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,15 @@ Version: 1.0.0
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------*/
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Tiro+Bangla:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+/* 
+	=========================================================
+	Please Note::
+	=========================================================
+	** In this template All sizing will count in "rem".
+	** 1rem = 10px
+
+*/
 html {
   font-size: 58%;
   -webkit-text-size-adjust: 100%;
@@ -32,9 +40,6 @@ body {
   margin: 0;
   padding: 0;
   background-color: transparent;
-}
-.dark body {
-  color: #FFFFFF;
 }
 
 p {
@@ -344,5 +349,18 @@ textarea.form-control:focus {
 /*--------------------------------------------------------------
 # Home Page
 --------------------------------------------------------------*/
+.hero_section {
+  position: relative;
+  z-index: 1;
+  height: 95vh;
+  overflow: hidden;
+}
+.hero_section video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center bottom;
+}
 
 /*# sourceMappingURL=style.css.map */
