--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,5 +1,13 @@
 // Import Google Font
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Tiro+Bangla:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+/* 
+	=========================================================
+	Please Note::
+	=========================================================
+	** In this template All sizing will count in "rem".
+	** 1rem = 10px
+
+*/
 html {
 	font-size: 58%;
 	-webkit-text-size-adjust: 100%;
@@ -9,17 +17,8 @@ html {
 	}
 	
 	@include lg-up {
-		font-size: 62.5%;
+		font-size: 62.5%; // 1rem  = 10px
 	}
-
-	// &.dark {
-	// 	background-color: $color__body;
-	// 	color: $color__white
-	// }
-	// &.light {
-	// 	background-color: #F8F8F8;
-	// }
-
 }
 body {
 	font-size: 1.6rem;
@@ -27,10 +26,6 @@ body {
 	margin: 0;
 	padding: 0;
 	background-color: transparent;
-
-	.dark & {
-		color: $color__white
-	}
 }
 p { 
 	font-size: 1.6rem;
