--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -22,12 +22,13 @@ html {
 	}
 }
 body {
-	font-size: 1.6rem;
+	font-size: 1.5rem;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	background-color: transparent;
+	background-color: #F5F5F5;
 	font-family: $font__body;
+	padding-top: 10rem;
 }
 p { 
 	font-size: 1.6rem;
