--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -18,3 +18,19 @@
         opacity: 1;
     }
 }
+
+.btn-theme {
+    display: inline-flex;
+    border: .1rem solid $color__theme;
+    padding: 1rem 2rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: normal;
+    border-radius: .3rem;
+    transition: all .3s;
+
+    &:hover {
+        background-color: $color__theme;
+        color: $color__white;
+    }
+}
