--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,13 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: transparent;
+  background-color: #F5F5F5;
   font-family: "Montserrat", sans-serif;
+  padding-top: 10rem;
 }
 
 p {
@@ -285,6 +286,21 @@ textarea.form-control:focus {
   opacity: 1;
 }
 
+.btn-theme {
+  display: inline-flex;
+  border: 0.1rem solid #C89328;
+  padding: 1rem 2rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: normal;
+  border-radius: 0.3rem;
+  transition: all 0.3s;
+}
+.btn-theme:hover {
+  background-color: #C89328;
+  color: #FFFFFF;
+}
+
 .glightbox-clean .gslide-title {
   margin: 0;
 }
@@ -339,6 +355,25 @@ textarea.form-control:focus {
 /*--------------------------------------------------------------
     [ ## Header ]
 --------------------------------------------------------------*/
+header {
+  padding: 2rem 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 999;
+  background-color: #FFFFFF;
+}
+header .start-block ul, header .end-block ul {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+header .end-block a i {
+  font-size: 2rem;
+}
+
 /*--------------------------------------------------------------
     [ ## Page Banner]
 --------------------------------------------------------------*/
@@ -354,7 +389,7 @@ textarea.form-control:focus {
 .hero_section {
   position: relative;
   z-index: 1;
-  height: 95vh;
+  height: 100vh;
   overflow: hidden;
 }
 .hero_section video {
@@ -363,6 +398,113 @@ textarea.form-control:focus {
   height: 100%;
   object-fit: cover;
   object-position: center bottom;
+  pointer-events: none;
+  user-select: none;
+}
+
+.business_stats {
+  margin: 8rem 0;
+}
+.business_stats .icon {
+  margin-bottom: 0.5rem;
+}
+.business_stats .icon svg {
+  height: 5rem;
+}
+.business_stats .number {
+  color: #C89328;
+  font-weight: 600;
+  font-size: 4rem;
+}
+.business_stats p {
+  font-weight: 500;
+  max-width: 18rem;
+  margin: 0 auto;
+  line-height: 1.35;
+  font-size: 1.5rem;
+}
+
+.ceo_message {
+  margin: 10rem 0;
+}
+.ceo_message .row {
+  --bs-gutter-x: 4rem;
+}
+.ceo_message .title {
+  font-size: 3.2rem;
+  font-weight: 600;
+  margin-bottom: 3rem;
+}
+.ceo_message .text-content p {
+  font-size: 1.4rem;
+}
+.ceo_message .text-content p + p {
+  margin-top: 2rem;
+}
+.ceo_message .image-content {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.mision-vision .item {
+  position: relative;
+  padding: 6rem 1.5rem;
+  z-index: 1;
+}
+.mision-vision .item .front .icon {
+  margin-bottom: 4rem;
+}
+.mision-vision .item .front .icon svg {
+  max-height: 5rem;
+}
+.mision-vision .item .front h5 {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.mision-vision .item .back {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  z-index: 2;
+  transition: all 0.3s;
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  padding: 3rem;
+  text-align: left;
+  transform: scale(0.8);
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+.mision-vision .item:hover .back {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+}
+
+.evolution {
+  margin: 10rem 0;
+}
+.evolution .section-title {
+  margin-bottom: 3rem;
+}
+.evolution .title {
+  font-size: 3.2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.evolution .description {
+  max-width: 65rem;
+}
+.evolution .evolution-item .dot {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+  margin: 0 auto 0.7rem;
 }
 
 /*# sourceMappingURL=style.css.map */
