--- a/assets/sass/variables-site/_variables-site.scss
+++ b/assets/sass/variables-site/_variables-site.scss
@@ -2,8 +2,7 @@
 $color__black: #000000;
 $color__white: #FFFFFF;
 $color__body: #1F2933;
-$color__theme: #45B651;
-$color__secondary: #E00011;
+$color__theme: #C89328;
 
 
 // Font Variable
