--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -1,3 +1,57 @@
 /*--------------------------------------------------------------
 # Footer-block
 --------------------------------------------------------------*/
+footer {
+    .footer-top {
+        padding: 0 0 3rem;
+
+        .wrapper {
+            border-top: .1rem solid $color__theme;
+            padding-top: 3rem;
+        }
+        .footer-widget {
+            .widget-title {
+                font-weight: 700;
+                font-size: 1.6rem;
+                margin-bottom: 1rem;
+            }
+
+            .menu-list {
+                li {
+                    margin: .3rem 0;
+                    a {
+                        font-size: 1.4rem;
+                        font-weight: 500;
+                        display: block;
+                        padding: .5rem 0;
+                        transition: all .2s;
+
+                        &:hover {
+                            letter-spacing: .1rem;
+                        }
+                    }
+                }
+            }
+
+            .btn-theme {
+                font-size: 1.2rem;
+                padding: 1rem 1.5rem;
+            }
+            .social-links {
+                display: flex;
+                gap: 2rem;
+
+                a {
+                    &:hover {
+                        color: $color__theme;
+                    }
+                }
+            }
+        }
+    }
+    .footer-bottom {
+        background-color: $color__black;
+        color: $color__white;
+        padding: 1rem 0;
+    }
+}
