--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -120,27 +120,175 @@
     }
 }
 
+.business-lines {
+    padding: 5rem 0 10rem;
+}
+
 .evolution {
-    margin: 10rem 0;
-    .section-title {
-        margin-bottom: 3rem;
-    }
-    .title {
-        font-size: 3.2rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-    }
-    .description {
-        max-width: 65rem;
+    margin: 8rem 0 5rem;
+    padding: 5rem 0 0;
+    position: relative;
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        background: url(../img/bg1.png) no-repeat top right;
+        z-index: -1;
+        opacity: .12;
+        background-size: contain;
     }
 
     .evolution-item {
+        transform-origin: top;
+        transition: all .3s ease;
         .dot {
             width: 2rem;
             height: 2rem;
             border-radius: 50%;
             background-color: #D9D9D9;
             margin: 0 auto .7rem;
+            transition: all .3s ease;
+        }
+        .content {
+            opacity: 0; 
+            transition: all .3s ease;
+            font-size: 1.4rem;
+        }
+        p {
+            transform-origin: top;
+            transition: all .3s ease;
+        }
+        &:hover {
+            transform: scale(1.1);
+            .dot {
+                transform: scale(1.3);
+            }
+            p {
+                color: $color__theme;
+                transform: scale(1.2);
+                font-weight: 600;
+            }
+            .content {
+                opacity: 1;
+            }
+        }
+    }
+
+    .swiper {
+        margin-top: 5rem;
+        .swiper-wrapper {
+            padding: 4rem 0 2rem;
+        }
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 4.9rem;
+            width: 100%;
+            height: 0;
+            border-top: .2rem solid #D9D9D9;
+        }
+    }
+}
+
+.our-partners {
+    background-color: $color__white;
+    padding: 8rem 0;
+    .section-title {
+        margin-bottom: 2rem;
+        .title {
+            font-size: 3.2rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+        .description {
+            max-width: 65rem;
+        }
+    }
+
+    .partner-item {
+        img {
+            filter: grayscale(100);
+            opacity: 0.4;
+            transition: all .3s;
+        }
+        &:hover {
+            img {
+                filter: grayscale(0);
+                opacity: 1;
+            }
+        }
+    }
+}
+
+.discover-scholarship {
+    padding: 10rem 0;
+    background:  #AFD0E9;
+    .section-title {
+        .title {
+            font-size: 3.2rem;
+            font-weight: 600;
+            line-height: 1.35;
+        }
+    }
+}
+
+.blogs {
+    padding: 10rem 0;
+    .section-title {
+        margin-bottom: 3rem;
+        .title {
+            font-size: 3.2rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+    }
+    .swiper {
+        padding: 1rem 0;
+    }
+    .swiper-slide {
+        transition: all .2s;
+        transform: scale(.9);
+        
+        &-active {
+            transform: scale(1);
+            z-index: 9;
+            box-shadow: 0 0 1rem 0 rgba($color__black, .05);
+        }
+    }
+
+    .blog-item {
+
+        background-color: $color__white;
+        .post-description {
+            padding: 3rem;
+        }
+        .date {
+            margin-bottom: 1rem;
+            font-weight: 500;
+            span {
+                color: $color__theme;
+            }
+        }
+        .post-title {
+            font-weight: 600;
+            margin-bottom: 1.5rem;
+            font-size: 1.8rem;
+        }
+    }
+}
+
+.social-media-gallery {
+    padding: 0 0 8rem;
+    .section-title {
+        margin-bottom: 3rem;
+        .title {
+            font-size: 3.2rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
         }
     }
 }
