--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -28,7 +28,8 @@ body {
 	padding: 0;
 	background-color: #F5F5F5;
 	font-family: $font__body;
-	padding-top: 10rem;
+	// padding-top: 10rem;
+	padding-top: 9rem;
 }
 p { 
 	font-size: 1.6rem;
