--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -7,18 +7,107 @@ header {
     width: 100%;
     z-index: 999;
     background-color: $color__white;
+    transition: all .25s;
+    box-shadow: 0 0 1rem 0 rgba($color__black, .1);
 
+    .brand-logo {
+        width: 16rem;
+        @include lg-up {
+            width: 20rem;
+        }
+        @include xxl-up {
+            width: 25rem;
+        }
+    }
     .start-block, .end-block {
         ul {
             display: flex;
             align-items: center;
-            gap: 2rem;
+            gap: 1.5rem;
+
+            @include lg-up {
+                gap: 2rem;
+            }
         }
     }
     .end-block  {
         a {
             i {
                 font-size: 2rem;
+            }
+        }
+    }
+}
+.header__megamenu {
+    position: fixed;
+    top: 8.6rem;
+    left: 0;
+    width: 100%;
+    background-color: $color__white;
+    z-index: 99;
+    padding: 2.5rem 0;
+    transition: all .25s;
+    transform: translateY(-1rem);
+    opacity: 0;
+    visibility: hidden;
+    @include lg-up {
+        padding: 5rem 0;
+    }
+    @include xxl-up {
+        top: 11.6rem;
+    }
+    .widget-wrapper {
+        @include md-down {
+            height: 70vh;
+            overflow-x: hidden;
+            overflow-y: scroll;
+        }
+    }
+
+    &.menu_active {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .megamenu-widget {
+
+        .widget-title {
+            font-weight: 700;
+            font-size: 1.6rem;
+            margin-bottom: 1rem;
+        }
+
+        .menu-list {
+            li {
+                margin: .1rem 0;
+                a {
+                    font-size: 1.4rem;
+                    font-weight: 500;
+                    display: block;
+                    padding: .3rem 0;
+                    transition: all .2s;
+
+                    &:hover {
+                        color: $color__theme;
+                    }
+                }
+            }
+        }
+
+        .btn-theme {
+            font-size: 1.2rem;
+            padding: 1rem 1.5rem;
+        }
+
+        .social-links {
+            display: flex;
+            gap: 2rem;
+
+            a {
+                &:hover {
+                    color: $color__theme;
+                }
             }
         }
     }
