--- a/assets/sass/mixins/_mixins-master.scss
+++ b/assets/sass/mixins/_mixins-master.scss
@@ -15,6 +15,11 @@
     vertical-align: top;
 }
 
+@mixin xl-down {
+    @media screen and (max-width: 1199px) {
+        @content;
+    } 
+}
 @mixin lg-down {
     @media screen and (max-width: 991px) {
         @content;
