--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,8 +1,13 @@
 .hero_section {
     position: relative;
     z-index: 1;
-    height: 100vh;
+    padding-bottom: 56.25%;
     overflow: hidden;
+
+
+    @include sm-up {
+        // height: 45vh;
+    }
     video {
         position: absolute;
         width: 100%;
@@ -12,34 +17,31 @@
         pointer-events: none;
         user-select: none;
     }
-
-
-    // &::before {
-    //     content: '';
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 10rem;
-    //     z-index: 999;
-    //     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 20%, rgba(0,0,0,0) 100%);
-    // }
 }
 
 
 .business_stats {
     margin: 8rem 0;
-
+    .row {
+        --bs-gutter-y: 2rem;
+    }
     .icon {
         margin-bottom: .5rem;
         svg {
-            height: 5rem;
+            max-height: 5rem;
+            
+            @include xl-down {
+                max-height: 3rem;
+            }
         }
     }
     .number {
         color: $color__theme;
         font-weight: 600;
         font-size: 4rem;
+        @include lg-down {
+            font-size: 3rem;
+        }
     }
     p {
         font-weight: 500;
@@ -52,13 +54,21 @@
 
 .ceo_message {
     margin: 10rem 0;
+    @include lg-down {
+        margin: 6rem 0;
+    }
     .row {
         --bs-gutter-x: 4rem;
+        --bs-gutter-y: 2rem;
     }
     .title {
         font-size: 3.2rem;
         font-weight: 600;
         margin-bottom: 3rem;
+
+        @include lg-down {
+            font-size: 2.8rem;
+        }
     }
     .text-content {
         p {
@@ -69,6 +79,7 @@
         }
     }
     .image-content {
+        min-height: 40rem;
         height: 100%;
         background-size: cover;
         background-position: center;
@@ -85,9 +96,14 @@
         .front {
             .icon {
                 margin-bottom: 4rem;
-
+                @include lg-down {
+                    margin-bottom: 2rem;
+                }
                 svg {
                     max-height: 5rem;
+                    @include lg-down {
+                        max-height: 4rem;
+                    }
                 }
             }
             h5 {
@@ -109,6 +125,9 @@
             transform: scale(.8);
             border-radius: .5rem;
             overflow: hidden;
+            @include lg-down {
+                padding: 2rem;
+            }
         }
         &:hover {
             .back {
@@ -120,14 +139,16 @@
     }
 }
 
-.business-lines {
-    padding: 5rem 0 10rem;
-}
 
 .evolution {
     margin: 8rem 0 5rem;
     padding: 5rem 0 0;
     position: relative;
+
+    @include lg-down {
+        padding: 3rem 0 2rem;
+    }
+
     &::after {
         content: '';
         position: absolute;
@@ -165,6 +186,7 @@
             transform: scale(1.1);
             .dot {
                 transform: scale(1.3);
+                background-color: $color__theme;
             }
             p {
                 color: $color__theme;
@@ -190,6 +212,87 @@
             width: 100%;
             height: 0;
             border-top: .2rem solid #D9D9D9;
+        }
+    }
+}
+
+.business-lines {
+    padding: 0 0 10rem;
+
+    .nav-tabs.main_tab {
+        border-top: .1rem solid #97999B;
+        border-bottom: .1rem solid #97999B;
+        @include xl-up {
+            justify-content: space-between;
+        }
+
+        li {
+            flex: 0 0 auto;
+            white-space: nowrap;
+            text-align: center;
+        }
+        .nav-link {
+            background-color: transparent;
+            color: $color__black;
+            padding: 1rem 1.5rem;
+            border: 0;
+            margin: 0;
+            width: 100%;
+            border-radius: 0;
+
+            &:hover, &.active {
+                background-color: $color__theme;
+                color: $color__white;
+            }
+        }
+    }
+    .nav-tabs.secondary {
+        // border: 0;
+        .nav-link {
+            background-color: transparent;
+            color: $color__black;
+            padding: 1rem 2rem;
+            border: 0;
+            margin: 0;
+            width: 100%;
+            border-radius: 0;
+
+            &.active {
+                background-color: rgba($color__black, .05);
+                color: $color__theme;
+                font-weight: bold;
+            }
+        }
+    }
+    .tab-pane {
+        .text-content {
+            p {
+                font-size: 1.5rem;
+                line-height: 1.5;
+                & + p {
+                    margin-top: 2rem;
+                }
+            }
+        }
+    }
+    .nav-tabs.third {
+        gap: 2rem;
+        border: 0;
+        border-top: .2rem solid #97999B;
+        .nav-link {
+            background-color: transparent;
+            border: 0;
+            border-radius: 0;
+            color: $color__black;
+            border-top: .4rem solid transparent;
+            margin-top: -.4rem;
+            padding: .7rem 0 0;
+
+            &.active {
+                border-top-color: $color__theme;
+                font-weight: 600;
+                color: $color__theme;
+            }
         }
     }
 }
@@ -225,9 +328,14 @@
 }
 
 .discover-scholarship {
-    padding: 10rem 0;
+    @include md-down {
+        padding: 8rem 0 0;
+    }
     background:  #AFD0E9;
+    position: relative;
+    z-index: 1;
     .section-title {
+        margin-bottom: 0;
         .title {
             font-size: 3.2rem;
             font-weight: 600;
@@ -238,6 +346,9 @@
 
 .blogs {
     padding: 10rem 0;
+    @include lg-down {
+        padding: 6rem 0;
+    }
     .section-title {
         margin-bottom: 3rem;
         .title {
@@ -250,20 +361,30 @@
         padding: 1rem 0;
     }
     .swiper-slide {
-        transition: all .2s;
-        transform: scale(.9);
+        transition: all .3s;
+        transform: scale(.8);
+        transform-origin: center;
+        opacity: .1;
+
+        .post-description {
+            opacity: 0;
+            transition: all .3s;
+        }
         
         &-active {
+            opacity: 1;
             transform: scale(1);
             z-index: 9;
             box-shadow: 0 0 1rem 0 rgba($color__black, .05);
+            .post-description {
+                opacity: 1;
+            }
         }
     }
 
     .blog-item {
-
-        background-color: $color__white;
         .post-description {
+            background-color: $color__white;
             padding: 3rem;
         }
         .date {
