--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -4,10 +4,10 @@
     padding-bottom: 56.25%;
     overflow: hidden;
 
-
-    @include sm-up {
-        // height: 45vh;
+    @include xl-up {
+        padding-bottom: 50%;
     }
+
     video {
         position: absolute;
         width: 100%;
