--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -19,6 +19,30 @@ header {
             width: 25rem;
         }
     }
+    .navbar-toggler {
+        width: 2rem;
+        height: 2rem;
+        @include flex-center;
+        position: relative;
+        svg {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: all .2s;
+        }
+        .close {
+            opacity: 0;
+        }
+        &.menu_active {
+            .close {
+                opacity: 1;
+            }
+            .bars {
+                opacity: 0;
+            }
+        }
+    }
     .start-block, .end-block {
         ul {
             display: flex;
@@ -31,9 +55,26 @@ header {
         }
     }
     .end-block  {
+        li:nth-child(2),li:nth-child(3) {
+            @include sm-down {
+                display: none;
+            }
+        }
         a {
-            i {
-                font-size: 2rem;
+            @include flex-center;
+            width: 3.5rem;
+            height: 3.5rem;
+            border: .1rem solid #97999B;
+            border-radius: 50%;
+            transition: all .2s;
+            svg {
+                transition: all .2s;
+            }
+            &:hover {
+                border-color: $color__black;
+                svg {
+                    fill: $color__black;
+                }
             }
         }
     }
