Gradient fading added

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -28,8 +28,13 @@ body {
 	padding: 0;
 	background-color: #F5F5F5;
 	font-family: $font__body;
-	// padding-top: 10rem;
 	padding-top: 9rem;
+	@include lg-up {
+		padding-top: 10rem;
+	}
+	@include xxl-up {
+		padding-top: 11.6rem;
+	}
 }
 p { 
 	font-size: 1.6rem;
