--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,16 @@ body {
   font-family: "Montserrat", sans-serif;
   padding-top: 9rem;
 }
+@media screen and (min-width: 992px) {
+  body {
+    padding-top: 10rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  body {
+    padding-top: 11.6rem;
+  }
+}
 
 p {
   font-size: 1.6rem;
@@ -397,6 +407,8 @@ header {
   z-index: 999;
   background-color: #FFFFFF;
   transition: all 0.25s;
+}
+header.sticky {
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.1);
 }
 header .brand-logo {
@@ -610,6 +622,26 @@ footer .footer-bottom {
   pointer-events: none;
   user-select: none;
 }
+.hero_section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 6rem;
+  z-index: 1;
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+}
+.hero_section::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 6rem;
+  z-index: 1;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(245, 245, 245) 100%);
+}
 
 .business_stats {
   margin: 8rem 0;
@@ -679,6 +711,14 @@ footer .footer-bottom {
   height: 100%;
   background-size: cover;
   background-position: center;
+  position: relative;
+  z-index: 1;
+}
+.ceo_message .image-content::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle farthest-side at 50% 50%, rgba(255, 255, 255, 0) 50%, rgb(245, 245, 245) 100%);
 }
 
 .mision-vision .item {
@@ -921,6 +961,26 @@ footer .footer-bottom {
   font-size: 3.2rem;
   font-weight: 600;
   line-height: 1.35;
+}
+.discover-scholarship::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 6rem;
+  z-index: 1;
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+}
+.discover-scholarship::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 8rem;
+  z-index: 1;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(245, 245, 245) 100%);
 }
 
 .blogs {
