--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,11 @@ textarea.form-control:focus {
     max-width: 1300px;
   }
 }
+@media screen and (min-width: 1900px) {
+  .container {
+    max-width: 1500px;
+  }
+}
 
 /*--------------------------------------------------------------
     [ ## Header ]
@@ -842,10 +847,51 @@ footer .footer-bottom {
   content: "";
   position: absolute;
   left: 0;
-  top: 4.9rem;
+  top: 4.8rem;
   width: 100%;
   height: 0;
-  border-top: 0.2rem solid #D9D9D9;
+  border-top: 0.4rem solid #D9D9D9;
+}
+.evolution .swiper .nav_btn {
+  position: absolute;
+  top: 2.7rem;
+  z-index: 99;
+}
+.evolution .swiper .nav_btn svg {
+  transition: all 0.2s ease;
+}
+@media screen and (max-width: 1199px) {
+  .evolution .swiper .nav_btn svg {
+    width: 2rem;
+    height: 4.5rem;
+  }
+}
+.evolution .swiper .nav_btn.swiper-button-disabled {
+  pointer-events: none;
+}
+.evolution .swiper .nav_btn.swiper-button-disabled svg {
+  opacity: 0;
+  visibility: hidden;
+}
+.evolution .swiper .nav_btn.swiper-button-disabled::before {
+  content: "";
+  position: absolute;
+  width: 0.4rem;
+  height: 100%;
+  background-color: #d9d9d9;
+  transition: all 0.2s ease;
+}
+.evolution .swiper .button-prev {
+  left: 0;
+}
+.evolution .swiper .button-prev.swiper-button-disabled::before {
+  left: 0;
+}
+.evolution .swiper .button-next {
+  right: 0;
+}
+.evolution .swiper .button-next.swiper-button-disabled::before {
+  right: 0;
 }
 
 .business-lines {
@@ -1001,6 +1047,61 @@ footer .footer-bottom {
 }
 .blogs .swiper {
   padding: 1rem 0;
+}
+.blogs .swiper .nav_btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 9;
+}
+@media screen and (max-width: 575px) {
+  .blogs .swiper .nav_btn {
+    display: none;
+  }
+}
+.blogs .swiper .nav_btn svg {
+  width: 5rem;
+}
+@media screen and (min-width: 768px) {
+  .blogs .swiper .nav_btn svg {
+    width: 6rem;
+  }
+}
+.blogs .swiper .nav_btn.button-prev {
+  left: 6vw;
+}
+@media screen and (min-width: 768px) {
+  .blogs .swiper .nav_btn.button-prev {
+    left: 10vw;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .blogs .swiper .nav_btn.button-prev {
+    left: 15vw;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .blogs .swiper .nav_btn.button-prev {
+    left: 20vw;
+  }
+}
+.blogs .swiper .nav_btn.button-next {
+  right: 6vw;
+}
+@media screen and (min-width: 768px) {
+  .blogs .swiper .nav_btn.button-next {
+    right: 10vw;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .blogs .swiper .nav_btn.button-next {
+    right: 15vw;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .blogs .swiper .nav_btn.button-next {
+    right: 20vw;
+  }
 }
 .blogs .swiper-slide {
   transition: all 0.3s;
