--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -239,11 +239,58 @@
             content: '';
             position: absolute;
             left: 0;
-            top: 4.9rem;
+            top: 4.8rem;
             width: 100%;
             height: 0;
-            border-top: .2rem solid #D9D9D9;
+            border-top: .4rem solid #D9D9D9;
         }
+        .nav_btn {
+            position: absolute;
+            top: 2.7rem;
+            z-index: 99;
+
+            svg {
+                transition: all .2s ease;
+                @include xl-down {
+                    width: 2rem;
+                    height: 4.5rem;
+                }
+            }
+
+            &.swiper-button-disabled {
+                pointer-events: none;
+                svg {
+                    opacity: 0;
+                    visibility: hidden;
+                }
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: .4rem;
+                    height: 100%;
+                    background-color: #d9d9d9;
+                    transition: all .2s ease;
+                }
+            }
+        }
+        .button-prev {
+            left: 0;
+            &.swiper-button-disabled {
+                &::before {
+                    left: 0;
+                }
+            }
+        }
+        .button-next {
+            right: 0;
+
+            &.swiper-button-disabled {
+                &::before {
+                    right: 0;
+                }
+            }
+        }
+        
     }
 }
 
@@ -411,6 +458,46 @@
     }
     .swiper {
         padding: 1rem 0;
+        .nav_btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 9;
+            @include sm-down {
+                display: none;
+            }
+
+            svg {
+                width: 5rem;
+                @include md-up {
+                    width: 6rem;
+                }
+            }
+            &.button-prev {
+                left: 6vw;
+                @include md-up {
+                    left: 10vw;
+                }
+                @include xl-up {
+                    left: 15vw;
+                }
+                @include xxl-up {
+                    left: 20vw;
+                }
+            }
+            &.button-next {
+                right: 6vw;
+                @include md-up {
+                    right: 10vw;
+                }
+                @include xl-up {
+                    right: 15vw;
+                }
+                @include xxl-up {
+                    right: 20vw;
+                }
+            }
+        }
     }
     .swiper-slide {
         transition: all .3s;
