working on about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1151,4 +1151,11 @@ footer .footer-bottom {
   margin-bottom: 1rem;
 }
 
+/*--------------------------------------------------------------
+# Home Page
+--------------------------------------------------------------*/
+.about__us {
+  padding: 4rem 0;
+}
+
 /*# sourceMappingURL=style.css.map */
