--- a/assets/sass/pages/_pages.scss
+++ b/assets/sass/pages/_pages.scss
@@ -2,3 +2,8 @@
 # Home Page
 --------------------------------------------------------------*/
 @import "home";
+
+/*--------------------------------------------------------------
+# Home Page
+--------------------------------------------------------------*/
+@import "about";
