--- a/assets/sass/variables-site/_variables-site.scss
+++ b/assets/sass/variables-site/_variables-site.scss
@@ -3,6 +3,7 @@ $color__black: #000000;
 $color__white: #FFFFFF;
 $color__body: #1F2933;
 $color__theme: #C89328;
+$color__gray: #97999B;
 
 
 // Font Variable
